# LCCVLabCG

./: CMakeLists.txt  Object.cpp  Object.h  README.md  Wall.cpp  Wall.h
src/: OpenGLCustomObj.h  main.cpp
